// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders badge in bottom left corner 1`] = `
<View>
  <View>
    Text
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
        },
        Object {
          "backgroundColor": "#6200ee",
          "borderRadius": 6,
          "bottom": -6,
          "left": -6,
          "paddingHorizontal": 6,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Helvetica Neue",
            "textAlign": "left",
            "writingDirection": "ltr",
          },
          Object {
            "color": "#ffffff",
          },
        ]
      }
    >
      3
    </Text>
  </View>
</View>
`;

exports[`renders badge in bottom right corner 1`] = `
<View>
  <View>
    Text
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
        },
        Object {
          "backgroundColor": "#6200ee",
          "borderRadius": 6,
          "bottom": -6,
          "paddingHorizontal": 6,
          "right": -6,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Helvetica Neue",
            "textAlign": "left",
            "writingDirection": "ltr",
          },
          Object {
            "color": "#ffffff",
          },
        ]
      }
    >
      3
    </Text>
  </View>
</View>
`;

exports[`renders badge in different color 1`] = `
<View>
  <View>
    Text
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
        },
        Object {
          "backgroundColor": "#e91e63",
          "borderRadius": 6,
          "paddingHorizontal": 6,
          "right": -6,
          "top": -6,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Helvetica Neue",
            "textAlign": "left",
            "writingDirection": "ltr",
          },
          Object {
            "color": "#ffffff",
          },
        ]
      }
    >
      3
    </Text>
  </View>
</View>
`;

exports[`renders badge in different size 1`] = `
<View>
  <View>
    Text
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
        },
        Object {
          "backgroundColor": "#6200ee",
          "borderRadius": 6,
          "paddingHorizontal": 6,
          "right": -6,
          "top": -6,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Helvetica Neue",
            "textAlign": "left",
            "writingDirection": "ltr",
          },
          Object {
            "color": "#ffffff",
          },
        ]
      }
    >
      3
    </Text>
  </View>
</View>
`;

exports[`renders badge in top left corner 1`] = `
<View>
  <View>
    Text
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
        },
        Object {
          "backgroundColor": "#6200ee",
          "borderRadius": 6,
          "left": -6,
          "paddingHorizontal": 6,
          "top": -6,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Helvetica Neue",
            "textAlign": "left",
            "writingDirection": "ltr",
          },
          Object {
            "color": "#ffffff",
          },
        ]
      }
    >
      3
    </Text>
  </View>
</View>
`;

exports[`renders badge in top right corner by default 1`] = `
<View>
  <View>
    Text
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
        },
        Object {
          "backgroundColor": "#6200ee",
          "borderRadius": 6,
          "paddingHorizontal": 6,
          "right": -6,
          "top": -6,
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Helvetica Neue",
            "textAlign": "left",
            "writingDirection": "ltr",
          },
          Object {
            "color": "#ffffff",
          },
        ]
      }
    >
      3
    </Text>
  </View>
</View>
`;
